<resources>
    <string name="app_name">Boogle</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categorias</string>
    <string name="title_favorite">Favoritos</string>
    <string name="logo_app">Logo Boogle</string>
    <string name="log_in_anonymously">Logar Anonimamente</string>
    <string name="enter">Entrar</string>
    <string name="no_account">Não possui conta? Cadastre-se agora</string>
    <string name="insert_email">Insira Seu E-mail</string>
    <string name="insert_password">Insira Sua Senha</string>
    <string name="sign_in">Logar</string>
    <string name="forgot_password">Esqueceu sua senha? Clique aqui</string>
    <string name="insert_name">Insira Seu Nome</string>
    <string name="confirm_passwor">Confirmar Senha</string>
    <string name="save">Salvar</string>
    <string name="reset_password">Redefinir Senha</string>
    <string name="key_word">Digite uma palavra-chave</string>
    <string name="search_field">Pesquisar</string>
    <string name="set_favorite">Favoritar</string>
    <string name="close_modal">Fechar</string>
    <string name="book_image">Book image</string>
    <string name="default_notification_channel_id">com.boogle.ddm\n</string>
    <string name="favorite_book_firebase_message_success">"Livro adicionado aos favoritos!"</string>
    <string name="favorite_book_firebase_message_error">"Erro ao adicionar o livro aos favoritos!"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Perfil</string>
    <string name="logoff">Sair do App</string>
    <string name="alter_password">Alterar Senha</string>
<<<<<<< Updated upstream
    <string name="name_user">Nome</string>
    <string name="email_user">E-mail</string>
    <string name="delete_account">Deletar Conta</string>
=======
    <string name="remove_favorite">Remover Favorito\n</string>
>>>>>>> Stashed changes
</resources>