<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/popupLayout"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:background="@color/light_gray"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/coverImageView"
                android:layout_width="match_parent"
                android:layout_height="197dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/book_image" />

            <TextView
                android:id="@+id/popupTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/popupDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/favoriteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="0dp"
                    android:background="@color/blue"
                    android:text="@string/set_favorite"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/closeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="0dp"
                    android:background="@color/gray"
                    android:text="@string/close_modal"
                    android:textColor="@color/blue"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
